deploy: 256e1aa8274fb03e7690402618af22ce02989192

--- a/contents/03-generalities.html
+++ b/contents/03-generalities.html
@@ -564,7 +564,16 @@ window.Quarto = {
 
 
 </header><ul>
-<li><p>Slides: <a href="../slides/03-generalities-slides.html">link</a></p></li>
+<li>
+<p>Slides:</p>
+<ul>
+<li><p><a href="../slides/03-generalities-stat-slides.html">Projet d’analyse de données</a></p></li>
+<li><p><a href="../slides/03-generalities-space-slides.html">Espaces</a></p></li>
+<li><p><a href="../slides/03-generalities-distance-slides.html">Distances</a></p></li>
+<li><p><a href="../slides/03-generalities-bias-variance-slides.html">Biais / Variance</a></p></li>
+<li><p><a href="../slides/03-generalities-model-evaluation-slides.html">Évaluation de modèles</a></p></li>
+</ul>
+</li>
 <li><p>TD: <a href="../td/03-generalities-td.html">link</a></p></li>
 <li><p>TP: <a href="../td/03-generalities-tp.qmd">link</a></p></li>
 </ul>
