deploy: 8ee9425651023d25a620bda6f1238da498c03f2d

--- a/contents/06-nonsupervisee.html
+++ b/contents/06-nonsupervisee.html
@@ -564,7 +564,14 @@ window.Quarto = {
 
 
 </header><ul>
-<li><p>Slides: <a href="../slides/04-unsupervised-slides.qmd">link</a></p></li>
+<li>
+<p>Slides:</p>
+<ul>
+<li><p><a href="../slides/06-unsupervised-kmeans-slides.html"><span class="math inline">\(k\)</span>-moyennes</a></p></li>
+<li><p><a href="../slides/06-unsupervised-hierarchy-slides.html">Méthodes hiérarchiques</a></p></li>
+<li><p><a href="../slides/06-unsupervised-gaussian-slides.html">Mélanges de gaussiennes</a></p></li>
+</ul>
+</li>
 <li><p>TD: <a href="../td/06-unsupervised-td.html">link</a></p></li>
 <li><p>TP: <a href="../td/06-unsupervised-tp.qmd">link</a></p></li>
 </ul>
