deploy: ba3689a52e9ce42fd3192662a9befcb6c58fe343

--- a/slides/02-revisions-programming-slides.html
+++ b/slides/02-revisions-programming-slides.html
@@ -211,7 +211,7 @@ Steven Golovkine
 </div>
 </div>
 
-  <p class="date">01 sept. 2025</p>
+  <p class="date">05 sept. 2025</p>
   <figure>
     <center>
       <img src="../include/logo-ul.png" alt="logo" width="40%">
@@ -220,23 +220,23 @@ Steven Golovkine
 </section>
 <section id="philosophie-du-cours" class="slide level2">
 <h2>Philosophie du cours</h2>
-<div class="callout callout-important callout-titled callout-style-default">
+<div class="callout callout-important no-icon callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Important</strong></p>
+<p><strong>Liberté de choix</strong></p>
 </div>
 <div class="callout-content">
-<p><strong>Liberté de choix</strong></p>
-<p>Ce cours ne impose <strong>aucun langage spécifique</strong> !</p>
-<p>Vous êtes libres de choisir : - R, Python, Julia, ou même SAS - Le langage qui vous convient le mieux - Celui avec lequel vous êtes le plus à l’aise</p>
+<p>Ce cours n’impose <strong>aucun langage spécifique</strong> !</p>
+<p>Vous êtes libres de choisir :</p>
+<ul>
+<li><p>R, Python, Julia, ou même SAS.</p></li>
+<li><p>Le langage qui vous convient le mieux.</p></li>
+</ul>
 </div>
 </div>
 </div>
 <div class="fragment">
-<p><strong>Objectif commun :</strong> Code lisible, compréhensible et réutilisable</p>
+<p><strong>Objectif commun :</strong> Code lisible, compréhensible et réutilisable.</p>
 </div>
 </section>
 <section id="plan-de-la-présentation" class="slide level2">
