deploy: d65452c5a73a0ea91f0c09301926e82494ea3612

--- a/en/contents/02-revisions.html
+++ b/en/contents/02-revisions.html
@@ -569,7 +569,19 @@ window.Quarto = {
   
 
 
-</header><section id="outline" class="level2"><h2 class="anchored" data-anchor-id="outline">Outline</h2>
+</header><ul>
+<li>
+<p>Slides:</p>
+<ul>
+<li><p><a href="../slides/02-revisions-algebre-slides.qmd">Algèbre linéaire</a></p></li>
+<li><p><a href="../slides/02-revisions-proba-slides.qmd">Probabilités et statistiques</a></p></li>
+<li><p><a href="../slides/02-revisions-programming-slides.qmd">Algorithmique / Programmation</a></p></li>
+</ul>
+</li>
+<li><p>TD: <a href="../td/02-revision-td.qmd">link</a></p></li>
+<li><p>TP: <a href="../tp/02-revision-tp.qmd">link</a></p></li>
+</ul>
+<section id="outline" class="level2"><h2 class="anchored" data-anchor-id="outline">Outline</h2>
 <ol type="1">
 <li><p><a href="../contents/remainders/01-linear-algebra.html">Linear algebra</a></p></li>
 <li><p><a href="../contents/remainders/02-probabilities.html">Probabilities and statistics</a></p></li>
