--- a/en/contents/01-introduction.html
+++ b/en/contents/01-introduction.html
@@ -106,7 +106,10 @@ window.Quarto = {
 };
 </script><meta property="og:title" content="Introduction – STT-2200: Data Analysis">
 <meta property="og:description" content="Website for STT-2200">
+<meta property="og:image" content="https://stt2200.netlify.app/en/include/machine_learning.png">
 <meta property="og:site_name" content="STT-2200: Data Analysis">
+<meta property="og:image:height" content="439">
+<meta property="og:image:width" content="371">
 </head>
 <body class="nav-sidebar floating quarto-light">
 <script id="quarto-html-before-body" type="application/javascript">
@@ -616,6 +619,10 @@ Example
 <blockquote class="blockquote">
 <p>Statistics courses […] tend to resemble horoscopes. There are two senses to this resemblance. First, in order to remain plausibly correct, they must remain tremendously vague. This is because the targets of the advice, for both horoscopes and statistical advices, are diverse. But only the most general advice applies to all cases. A horoscope uses only the basic facts of birth to forecast life events, and a […] statistical guide uses only the basic facts of measurement and design to dictate a model. It is easy to do better, once more detail is available. In the case of statistical analysis, it is typically only the scientist who can provide that detail, not the statistician. Second, there are strong incentives for both astrologers and statisticians to exaggerate the power and importance of their advice. No one likes an astrologer who forecasts doom, and few want a statistician who admits the answers as desired are not in the data as collected. Scientists desire results, and they will buy and attend to statisticians and statistical procedures that promise them. What we end up with is too often <em>horoscopic</em>: vague and optimistic, but still claiming critical importance.</p>
 </blockquote>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure"><p><img src="../include/machine_learning.png" class="img-fluid figure-img"></p>
+<figcaption>Machine learning (<a href="https://xkcd.com/1838/">xkcd:1838</a>).</figcaption></figure>
+</div>
 
 
 
