--- a/slides/03-generalities-space-slides.html
+++ b/slides/03-generalities-space-slides.html
@@ -145,217 +145,239 @@ Steven Golovkine
 </div>
 </div>
 
-  <p class="date">11 sept. 2025</p>
+  <p class="date">12 sept. 2024</p>
   <figure>
     <center>
       <img src="../include/logo-ul.png" alt="logo" width="40%">
     </center>
   </figure>
 </section>
-<section id="pourquoi-étudier-les-espaces" class="slide level2">
-<h2>Pourquoi étudier les espaces ?</h2>
-<p>Le <strong>type de variables</strong> détermine :</p>
+<section id="pourquoi-sintéresser-à-lespace-mathématique" class="slide level2">
+<h2>Pourquoi s’intéresser à l’espace mathématique ?</h2>
+<p><br></p>
+<p>Le type de variables détermine :</p>
 <ul>
-<li class="fragment">L’<strong>espace mathématique</strong> dans lequel elle vit</li>
-<li class="fragment">Les <strong>mesures de distance</strong> qu’on peut utiliser</li>
-<li class="fragment">Les <strong>modèles pertinents</strong> à utiliser</li>
+<li class="fragment"><p>L’espace mathématique dans lequel elle vit.</p></li>
+<li class="fragment"><p>Les mesures de distance qu’on peut utiliser.</p></li>
+<li class="fragment"><p>Les modèles pertinents à utiliser.</p></li>
 </ul>
 <div class="fragment">
-<p><strong>→ Fondamental avant toute modélisation !</strong></p>
+<p>→ Il est donc fondamental de connaître l’espace mathématique avant toute modélisation !</p>
 </div>
 </section>
 <section id="plan" class="slide level2">
 <h2>Plan</h2>
+<p><br></p>
 <ol type="1">
-<li><strong>Unité statistique</strong> - Le choix du niveau d’analyse</li>
-<li><strong>Types de variables</strong> - 4 catégories principales<br>
-</li>
-<li><strong>Espaces associés</strong> - Le cadre mathématique <span class="math inline">\(\mathcal{X}\)</span></li>
+<li><p>Unité statistique - Le choix du niveau d’analyse.</p></li>
+<li><p>Types de variables - 4 catégories principales.</p></li>
+<li><p>Espaces associés - Le cadre mathématique <span class="math inline">\(\mathcal{X}\)</span>.</p></li>
 </ol>
 </section>
 <section id="unité-statistique" class="slide level2">
 <h2>Unité statistique</h2>
-<div class="columns">
-<div class="column" style="width:60%;">
-<p><strong>Définition :</strong> L’élément de base sur lequel une observation est effectuée.</p>
+<p><br></p>
+<p><strong>Définition :</strong> Élément de base définissant une observation.</p>
+<div class="fragment">
 <p><strong>C’est un choix</strong> du modélisateur qui détermine le niveau d’agrégation de l’analyse.</p>
-</div><div class="column" style="width:40%;">
-<p><strong>Exemples :</strong> - Enquête revenus → <strong>individu</strong> - Étude lycée → <strong>classe</strong><br>
-- Imagerie médicale → <strong>image</strong></p>
-</div></div>
+</div>
+<div class="fragment">
+<p><strong>Exemples :</strong></p>
+<ul>
+<li><p>Enquête sur les revenus</p></li>
+<li><p>Étude d’un lycée</p></li>
+<li><p>Imagerie médicale</p></li>
+</ul>
+</div>
 </section>
 <section id="attention-niveaux-danalyse-multiples" class="slide level2">
 <h2>Attention : Niveaux d’analyse multiples</h2>
-<div class="callout callout-caution callout-titled callout-style-default">
+<p><br></p>
+<div class="callout callout-warning no-icon callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Mise en garde</strong></p>
+<p><strong>Exemple : Image médicale</strong></p>
 </div>
 <div class="callout-content">
-<p><strong>Exemple : Image médicale</strong></p>
 <p>Une image = collection de pixels</p>
-<p><strong>Choix 1 :</strong> Pixel comme unité → Variables : RVB, opacité par pixel</p>
-<p><strong>Choix 2 :</strong> Image comme unité<br>
-→ Variables : caractéristiques globales</p>
+<p><strong>Choix 1 :</strong></p>
+<p>Pixel comme unité → Variables : RVB, opacité par pixel.</p>
+<p><strong>Choix 2 :</strong></p>
+<p>Image comme unité → Variables : caractéristiques globales.</p>
 </div>
 </div>
 </div>
 </section>
 <section id="types-de-variables-vue-densemble" class="slide level2">
 <h2>Types de variables : Vue d’ensemble</h2>
-<p>4 types principaux :</p>
+<p><br></p>
+<p>4 types principaux pour les scalaires :</p>
 <ol type="1">
-<li><strong>Numérique</strong> (quantitative)</li>
-<li><strong>Ordinale</strong></li>
-<li><strong>Nominale symétrique</strong></li>
-<li><strong>Nominale asymétrique</strong></li>
+<li><p>Numérique (quantitative)</p></li>
+<li><p>Ordinale</p></li>
+<li><p>Nominale symétrique</p></li>
+<li><p>Nominale asymétrique</p></li>
 </ol>
 </section>
 <section id="variable-numérique" class="slide level2">
 <h2>1. Variable numérique</h2>
-<div class="callout callout-warning callout-titled callout-style-default">
+<div class="callout callout-warning no-icon callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Avertissement</strong></p>
+<p><strong>Définition</strong></p>
 </div>
 <div class="callout-content">
-<p><strong>Définition :</strong> Valeurs numériques représentant une quantité mesurable</p>
-<p><strong>Exemples :</strong> - Revenu en dollars - Masse corporelle<br>
-- Âge en années - Température</p>
+<p>Une variable numérique représente une quantité mesurable.</p>
+<p>Exemples :</p>
+<ul>
+<li><p>Revenu en dollars</p></li>
+<li><p>Masse corporelle</p></li>
+<li><p>Température</p></li>
+</ul>
 </div>
 </div>
 </div>
-<p><strong>Espace naturel :</strong> <span class="math inline">\(\mathcal{X} = \mathbb{R}\)</span> (ou sous-ensemble)</p>
 </section>
 <section id="variable-ordinale" class="slide level2">
 <h2>2. Variable ordinale</h2>
-<div class="callout callout-warning callout-titled callout-style-default">
+<div class="callout callout-warning no-icon callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Avertissement</strong></p>
+<p><strong>Définition</strong></p>
 </div>
 <div class="callout-content">
-<p><strong>Définition :</strong> Variable qualitative dont les modalités peuvent être ordonnées naturellement, <strong>sans que l’écart soit quantifiable</strong></p>
-<p><strong>Exemples :</strong> - Niveau de revenu : faible &lt; moyen &lt; élevé - Satisfaction : pas du tout &lt; peu &lt; moyennement &lt; très &lt; tout à fait</p>
+<p>Une variable qualitative dont les modalités peuvent être ordonnées naturellement, <strong>sans que l’écart ne soit quantifiable</strong>.</p>
+<p>Exemples :</p>
+<ul>
+<li><p>Niveau de revenu : faible &lt; moyen &lt; élevé</p></li>
+<li><p>Satisfaction : pas du tout &lt; peu &lt; moyennement &lt; très &lt; tout à fait</p></li>
+</ul>
 </div>
 </div>
 </div>
 </section>
 <section id="variable-nominale-symétrique" class="slide level2">
 <h2>3. Variable nominale symétrique</h2>
-<div class="callout callout-warning callout-titled callout-style-default">
+<div class="callout callout-warning no-icon callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Avertissement</strong></p>
+<p><strong>Définition</strong></p>
 </div>
 <div class="callout-content">
-<p><strong>Définition :</strong> Variable qualitative où <strong>toutes les modalités sont aussi informatives</strong> les unes que les autres</p>
-<p><strong>Exemples :</strong> - Nationalité : française, canadienne, allemande… - Filière : mathématiques, physique, biologie… - Couleur : rouge, vert, bleu…</p>
+<p>Une variable qualitative où <strong>toutes les modalités sont aussi informatives</strong> les unes que les autres.</p>
+<p>Exemples :</p>
+<ul>
+<li><p>Nationalité : française, canadienne, allemande…</p></li>
+<li><p>Filière : mathématiques, physique, biologie…</p></li>
+<li><p>Couleur : rouge, vert, bleu…</p></li>
+</ul>
 </div>
 </div>
 </div>
 </section>
 <section id="variable-nominale-asymétrique" class="slide level2">
 <h2>4. Variable nominale asymétrique</h2>
-<div class="callout callout-warning callout-titled callout-style-default">
+<div class="callout callout-warning no-icon callout-titled callout-style-default">
 <div class="callout-body">
 <div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Avertissement</strong></p>
+<p><strong>Définition</strong></p>
 </div>
 <div class="callout-content">
-<p><strong>Définition :</strong> Variable qualitative où <strong>une modalité a un statut particulier</strong> (souvent “par défaut” ou plus fréquente)</p>
-<p><strong>Exemples :</strong> - Présence/absence de symptôme - Transaction frauduleuse/normale - Défaut/bon fonctionnement</p>
+<p>Une variable qualitative où <strong>une modalité a un statut particulier</strong> (souvent “par défaut” ou plus fréquente).</p>
+<p>Exemples :</p>
+<ul>
+<li><p>Présence/absence de symptôme</p></li>
+<li><p>Transaction frauduleuse/normale</p></li>
+<li><p>Défaut/bon fonctionnement</p></li>
+</ul>
 </div>
 </div>
 </div>
-<p><strong>Principe :</strong> 2 observations “par défaut” → peu d’information<br>
-2 observations “non par défaut” → beaucoup d’information</p>
 </section>
 <section id="au-delà-des-variables-classiques" class="slide level2">
 <h2>Au-delà des variables classiques</h2>
-<p><strong>Autres types de données :</strong> - Courbes et signaux - Textes et séquences - Images et vidéos<br>
-- Réseaux et graphes - Données géospatiales</p>
-<p><strong>→ Le choix de représentation dépend de l’unité statistique</strong></p>
+<ul>
+<li><p>Courbes et signaux</p></li>
+<li><p>Textes et séquences de caractères</p></li>
+<li><p>Images et vidéos</p></li>
+<li><p>Réseaux et graphes</p></li>
+<li><p>Données géospatiales</p></li>
+</ul>
+<p>→ Le choix de représentation dépend de l’unité statistique.</p>
 </section>
 <section id="espaces-dobservation-mathcalx" class="slide level2">
 <h2>Espaces d’observation <span class="math inline">\(\mathcal{X}\)</span></h2>
-<div class="columns">
-<div class="column" style="width:60%;">
-<p><strong>Définition :</strong> Espace mathématique dans lequel nos variables prennent leurs valeurs.</p>
-<p><strong>Rôle :</strong> - Cadre formel de travail - Guide les choix méthodologiques</p>
-</div><div class="column" style="width:40%;">
-<p><strong>Notation :</strong> <span class="math inline">\(\mathcal{X}\)</span> = espace d’observation</p>
-</div></div>
+<div class="callout callout-warning no-icon callout-titled callout-style-default">
+<div class="callout-body">
+<div class="callout-title">
+<p><strong>Définition</strong></p>
+</div>
+<div class="callout-content">
+<p>Espace mathématique dans lequel nos variables prennent leurs valeurs.</p>
+<ul>
+<li><p>Cadre formel de travail.</p></li>
+<li><p>Guide les choix méthodologiques.</p></li>
+</ul>
+</div>
+</div>
+</div>
+<p>Notation : <span class="math inline">\(\mathcal{X}\)</span> = espace d’observation</p>
 </section>
 <section id="variable-numérique-mathbbr" class="slide level2">
 <h2>Variable numérique → <span class="math inline">\(\mathbb{R}\)</span></h2>
-<div class="callout callout-note callout-titled callout-style-default">
-<div class="callout-body">
-<div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Note</strong></p>
-</div>
-<div class="callout-content">
-<p><strong>Cas général :</strong> <span class="math inline">\(\mathcal{X} = \mathbb{R}\)</span></p>
-<p><strong>Cas restreints :</strong> - Taille d’une personne : <span class="math inline">\(\mathcal{X} = [0, +\infty)\)</span> - Probabilité : <span class="math inline">\(\mathcal{X} = [0, 1]\)</span><br>
-- Pourcentage : <span class="math inline">\(\mathcal{X} = [0, 100]\)</span></p>
-</div>
-</div>
+<p><br></p>
+<p>Cas général : <span class="math inline">\(\mathcal{X} = \mathbb{R}\)</span></p>
+<div class="fragment">
+<p>Cas restreints :</p>
+<ul>
+<li><p>Taille d’une personne : <span class="math inline">\(\mathcal{X} = [0, +\infty)\)</span></p></li>
+<li><p>Probabilité : <span class="math inline">\(\mathcal{X} = [0, 1]\)</span></p></li>
+<li><p>Pourcentage : <span class="math inline">\(\mathcal{X} = [0, 100]\)</span></p></li>
+</ul>
 </div>
 </section>
 <section id="variable-nominale-ensemble-fini" class="slide level2">
 <h2>Variable nominale → Ensemble fini</h2>
-<div class="callout callout-note callout-titled callout-style-default">
-<div class="callout-body">
-<div class="callout-title">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<p><strong>Note</strong></p>
-</div>
-<div class="callout-content">
-<p><strong>Exemple : Lancer de dé</strong> <span class="math display">\[\mathcal{X} = \{1, 2, 3, 4, 5, 6\}\]</span></p>
-<p><strong>Exemple : Filière d’étude</strong> <span class="math display">\[\mathcal{X} = \{\text{Math}, \text{Physique}, \text{Bio}, \text{Info}\}\]</span></p>
-</div>
-</div>
-</div>
+<p><br></p>
+<p>Exemple : Lancer de dé</p>
+<p><span class="math display">\[\mathcal{X} = \{1, 2, 3, 4, 5, 6\}\]</span></p>
+<p>Exemple : Filière d’étude</p>
+<p><span class="math display">\[\mathcal{X} = \{\text{Math}, \text{Physique}, \text{Bio}, \text{Info}\}\]</span></p>
 </section>
 <section id="espaces-plus-complexes" class="slide level2">
 <h2>Espaces plus complexes</h2>
-<p><strong>Analyse de courbes :</strong> <span class="math display">\[\mathcal{X} = \mathcal{C}([a,b])\]</span> (fonctions continues sur <span class="math inline">\([a,b]\)</span>)</p>
-<p><strong>Analyse de texte :</strong> <span class="math display">\[\mathcal{X} = \{A, B, C, \ldots, Z\}\]</span> (alphabet)</p>
+<p><br></p>
+<p>Analyse de courbes : fonctions continues sur <span class="math inline">\([a,b]\)</span></p>
+<p><span class="math display">\[\mathcal{X} = \mathcal{C}([a,b])\]</span></p>
+<p>Analyse de texte : alphabet</p>
+<p><span class="math display">\[\mathcal{X} = \{A, B, C, \ldots, Z\}\]</span></p>
 </section>
 <section id="variables-multiples-produit-cartésien" class="slide level2">
 <h2>Variables multiples : Produit cartésien</h2>
-<p><strong>Observation simultanée :</strong> taille + poids + sexe</p>
+<p><br></p>
+<p>Observation simultanée : taille + poids + sexe</p>
 <p><span class="math display">\[\mathcal{X} = \mathcal{X}_1 \times \mathcal{X}_2 \times \mathcal{X}_3\]</span></p>
-<p><strong>Cas particulier :</strong> <span class="math inline">\(p\)</span> variables numériques <span class="math display">\[\mathcal{X} = \mathbb{R}^p\]</span></p>
+<p>Cas particulier : <span class="math inline">\(p\)</span> variables numériques <span class="math display">\[\mathcal{X} = \mathbb{R}^p\]</span></p>
 </section>
-<section id="exemple-concret" class="slide level2">
-<h2>Exemple concret</h2>
-<p><strong>Étude d’étudiants :</strong> - Age (numérique) : <span class="math inline">\(\mathcal{X}_1 = [16, 30]\)</span> - Filière (nominale symétrique) : <span class="math inline">\(\mathcal{X}_2 = \{\text{Math}, \text{Physique}\}\)</span><br>
-- Satisfaction (ordinale) : <span class="math inline">\(\mathcal{X}_3 = \{\text{Faible}, \text{Moyen}, \text{Élevé}\}\)</span></p>
-<p><strong>Espace d’observation :</strong> <span class="math display">\[\mathcal{X} = [16, 30] \times \{\text{Math}, \text{Physique}\} \times \{\text{Faible}, \text{Moyen}, \text{Élevé}\}\]</span></p>
+<section id="exemple-concret-étude-détudiants" class="slide level2">
+<h2>Exemple concret : étude d’étudiants</h2>
+<p><br></p>
+<ul>
+<li><p>Age (numérique) : <span class="math inline">\(\mathcal{X}_1 = [16, 30]\)</span>.</p></li>
+<li><p>Filière (nominale symétrique) : <span class="math inline">\(\mathcal{X}_2 = \{\text{Math}, \text{Physique}\}\)</span>.</p></li>
+<li><p>Satisfaction (ordinale) : <span class="math inline">\(\mathcal{X}_3 = \{\text{Faible}, \text{Moyen}, \text{Élevé}\}\)</span>.</p></li>
+</ul>
+<div class="fragment">
+<ul>
+<li>Espace d’observation :</li>
+</ul>
+<p><span class="math display">\[\mathcal{X} = [16, 30] \times \{\text{Math}, \text{Physique}\} \times \{\text{Faible}, \text{Moyen}, \text{Élevé}\}\]</span></p>
+</div>
 </section>
 <section id="récapitulatif" class="slide level2">
 <h2>Récapitulatif</h2>
+<p><br></p>
+<div class="fragment">
 <table class="caption-top">
 <thead>
 <tr class="header">
@@ -387,20 +409,22 @@ Steven Golovkine
 </tr>
 </tbody>
 </table>
+</div>
 </section>
 <section id="conclusion" class="slide level2">
 <h2>Conclusion</h2>
+<p><br></p>
 <ol type="1">
-<li class="fragment"><strong>L’unité statistique</strong> définit le niveau d’analyse</li>
-<li class="fragment"><strong>Le type de variable</strong> guide le choix de l’espace</li>
-<li class="fragment"><strong>L’espace d’observation</strong> <span class="math inline">\(\mathcal{X}\)</span> est le cadre mathématique</li>
-<li class="fragment"><strong>Variables multiples</strong> → produit cartésien</li>
+<li class="fragment"><p>L’unité statistique définit le niveau d’analyse.</p></li>
+<li class="fragment"><p>Le type de variable guide le choix de l’espace.</p></li>
+<li class="fragment"><p>L’espace d’observation <span class="math inline">\(\mathcal{X}\)</span> est le cadre mathématique.</p></li>
+<li class="fragment"><p>Variables multiples → produit cartésien d’ensemble.</p></li>
 </ol>
 <div class="fragment">
-<p><strong>Prochaine étape :</strong> Définir des distances dans ces espaces !</p>
+<p>→ Prochaine étape : Définir des distances dans ces espaces !</p>
+
+
 </div>
-
-
 </section>
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
