deploy: 58cd0dcb6aae23386e540e34b6e346a0255d0dfe

--- a/slides/03-generalities-distance-slides.html
+++ b/slides/03-generalities-distance-slides.html
@@ -126,7 +126,7 @@
     }
   </style>
 <meta property="og:title" content="Généralités – STT-2200: Analyse de données">
-<meta property="og:description" content="Data">
+<meta property="og:description" content="Distances">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 <body class="quarto-light">
@@ -135,7 +135,7 @@
 
 <section id="title-slide" class="quarto-title-block center">
   <h1 class="title">Généralités</h1>
-  <p class="subtitle">Data</p>
+  <p class="subtitle">Distances</p>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
@@ -530,6 +530,20 @@ Steven Golovkine
 </ol>
 <div class="fragment">
 <p>→ Le choix de distance influence directement les résultats !</p>
+</div>
+</section>
+<section id="conclusion" class="slide level2">
+<h2>Conclusion</h2>
+<p><br></p>
+<ol type="1">
+<li class="fragment"><p>Distance → mesure de dissemblance (4 propriétés mathématiques)</p></li>
+<li class="fragment"><p>Similarité → mesure de ressemblance (concept opposé)</p></li>
+<li class="fragment"><p>Variables numériques → Distance euclidienne (standardisée)</p></li>
+<li class="fragment"><p>Variables qualitatives → Encodage + distance adaptée</p></li>
+<li class="fragment"><p>Variables binaires → Distance de Jaccard</p></li>
+</ol>
+<div class="fragment">
+<p><strong>La suite :</strong> Comment utiliser ces distances dans des modèles ?</p>
 
 
 </div>
